--- a/styles.css
+++ b/styles.css
@@ -5,6 +5,7 @@
   font-weight: 100;
   font-family: 'Courier New', Courier, monospace;
   text-align: center;
+  color: aliceblue;
 }
 h1 {
   color: azure;
